# domesti-bot

./: .gitignore  CHANGELOG.md  README.md  automation-rules.json.example  device-manager  device_manager  device_manager.py  device_manager_cli.py  domesti-bot.config.json.example  domesti-secrets.json.example  gotailwind_device_manager.py  kasa_device_manager.py  kasa_discovery_store.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  rule_engine.py  sonos_device_manager.py
.cursor/rules/: device-display-name-mac.mdc  device-family-async-polling.mdc  email-provenance.mdc  example-email-addresses.mdc  pr-ship-and-review.mdc  pr-workflow.mdc  presence-user-location-nomenclature.mdc  python-closed-set-enums.mdc  python-sorted-methods.mdc  test-assert-message-constants.mdc  typescript-closed-set-enums.mdc
.github/: CODEOWNERS  dependabot.yml
.github/ci/: pyright  pyright.sh  pytest-browser  pytest-browser.sh  pytest-hermetic  pytest-hermetic.sh  python-static  ruff  secret-scan.sh  setup-python  shellcheck  shellcheck.sh  web-build  workflow-lint.sh
.github/scripts/: release-pr-checks.sh
.github/workflows/: ci-reusable.yml  ci.yml  cleanup-branch-on-merge.yml  cleanup-merged-branches.yml  cve-check.yml  dependabot-auto-merge.yml  merged-pr-closer.yml  release-please.yml
app/: __init__.py  _build_metadata.py  androidtv_device_manager.py  astronomical_schedule.py  automation_rules_loader.py  build_info.py  compact_icon_svg_process.py  cron_schedule.py  deferred_device_action_store.py  device_discovery_store.py  device_display.py  device_enums.py  device_label_conflicts.py  device_mac.py  device_manager.py  device_manager_cli.py  device_state_change.py  device_state_watcher.py  discovery_cache_sync.py  domesti_bot_cli.py  dwell_watch_index.py  ep1_credentials.py  ep1_device_manager.py  expected_device_change.py  geofence_transition_state_store.py  gotailwind_device_manager.py  home_location.py  kasa_credentials.py  kasa_device_manager.py  kasa_discovery_store.py  location_history_retention.py  location_monitoring_policy.py  location_report.py  location_request_coordinator.py  location_request_rate_limits.py  logging_config.py  mytracks_logging.py  mytracks_service.py  mytracks_store.py  operator_alerts.py  (+37 more)
app/api/: __init__.py  app.py  location_update_ingest.py  location_update_routes.py  mytracks_relay_auth.py  mytracks_routes.py  rules_routes.py  schemas.py  settings_routes.py  smtp_routes.py  ui_action_logging.py  ui_state.py  vizio_settings_routes.py  webhooks_routes.py
app/api/static/: compact-layout-prototype.html  index.html  manifest.webmanifest  sw.js
app/db/: __init__.py  base.py  bootstrap_cache.py  engine.py  legacy_migrations.py  models.py  schema.py  schema_sync.py  secrets.py  secrets_key.py  session.py  writer.py
config/: __init__.py  serve.py
docs/: AGENTS.md  GRAPHITE.md  MY_TRACKS_INTEGRATION_PLAN.md  PLAN.md  PYPI_PUBLISH_PLAN.md  README.md  RELEASING.md  RULE_ENGINE_PLAN.md  VIZIO_WOL_FOLLOWUP.md
etc/systemd/: domesti-bot.service
production/systemd/: device-manager-server.service.template  domesti-bot-server.service.template
scripts/: device-manager  device-manager-server  domesti-bot  domesti-bot-server  embed-build-metadata  embed_build_metadata.py  install-hooks  on-deploy  verify-pypi-release  verify_google_cast_discovery.py  wait-for-copilot-review
scripts/hooks/: pre-push
scripts/internal/: generate-compact-icon-preview  import-compact-icons-from-zip  migrate-rule-device-ids  verify-mytracks-location-request  verify-mytracks-pairing
tests/: test_device_manager_cli.py  test_gotailwind_integration.py  test_kasa_discovery_store.py  test_kasa_integration.py  test_kasa_rediscover.py  test_rule_engine.py  test_sonos_device_manager.py
tests/python/: conftest.py  test_about_dialog_tablet_css.py  test_aioesphomeapi_dep.py  test_androidtv_device_manager.py  test_androidtv_temporarily_disabled.py  test_api_access_log.py  test_api_landing.py  test_api_meta.py  test_api_mytracks_webhooks.py  test_api_rules_routes.py  test_api_settings_credentials_test.py  test_api_settings_kasa_credentials.py  test_api_settings_mytracks.py  test_api_settings_smtp.py  test_api_settings_tailwind_token.py  test_api_settings_vizio_auth.py  test_api_ui_action_logging.py  test_api_ui_actions.py  test_api_ui_device_toggle.py  test_api_ui_sonos_actions.py  test_api_ui_state.py  test_api_ui_tailwind_actions.py  test_api_ui_vizio_actions.py  test_astronomical_conditions.py  test_astronomical_schedule.py  test_automation_rules_loader.py  test_bootstrap_schema.py  test_build_info.py  test_cli_version.py  test_compact_icon_assets.py  test_compact_icon_svg_process.py  test_cron_schedule.py  test_db_concurrency.py  test_db_secrets.py  test_deferred_device_action_store.py  test_device_discovery_store.py  test_device_display.py  test_device_enums.py  test_device_label_conflicts.py  test_device_mac.py  (+87 more)
web/: .gitignore  README.md  build.mjs  package.json  pnpm-lock.yaml  pnpm-release-age-grandfather.tsv  pnpm-workspace.yaml  tsconfig.json
web/scripts/: rasterize-pwa-icons.mjs
web/src/: api.ts  astronomical-conditions.ts  closed-sets.ts  ep1-header-status.ts  ep1-settings-panel.ts  format-timestamp.ts  geofence-map-leaflet.ts  geofence-map.ts  home-location-map-inset.ts  kasa-settings-panel.ts  location-report.ts  mail-settings-panel.ts  main.ts  map-device-colors.ts  my-tracks-pairing-panel.ts  my-tracks-settings-panel.ts  mytracks-sync-dialog.ts  mytracks-ui-helpers.ts  presence-map.ts  presence-mini-map.ts  rule-inspector.ts  rule-summary.ts  rules-constants.ts  rules-data-source.ts  rules-dialog.ts  rules-evaluate.ts  rules-mock-fixtures.ts  rules-ui-helpers.ts  settings-hub-dialog.ts  settings-secret-field.ts  tailwind-settings-panel.ts  types.ts  ui-instance.ts  ui-toast.ts  vacation-mode-settings-panel.ts  vizio-settings-panel.ts
