[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "domesti-bot"
version = "1.0.1"
description = "Self-hosted LAN control surface for TP-Link Kasa, Sonos, and GoTailwind devices, with a tile-based web UI."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Henrique Andrade", email = "thehcma@users.noreply.github.com" },
]
requires-python = ">=3.11"
keywords = [
    "domesti-bot",
    "fastapi",
    "home-automation",
    "kasa",
    "sonos",
    "tailwind",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
]
dependencies = [
    "aiohappyeyeballs==2.6.2",
    "aiohttp==3.14.0",
    "certifi==2026.5.20",
    "click>=8.4.1",
    "cryptography>=48.0.0",
    "fastapi>=0.136.3",
    "gotailwind[cli]",
    "greenlet==3.5.1",
    "httptools==0.8.0",
    "httpx>=0.28.1",
    "idna>=3.18",
    "lxml==6.1.1",
    "mashumaro==3.22",
    "prompt_toolkit>=3.0.43",
    "protobuf==7.35.0",
    "pychromecast>=14.0.10",
    "pyproj",
    "python-kasa",
    "requests>=2.34.2",
    "soco>=0.31.1",
    "sqlalchemy>=2.0.50",
    "starlette>=1.2.1",
    "typer>=0.26.7",
    "uvicorn[standard]>=0.49.0",
    "watchfiles==1.2.0",
    "wcwidth==0.8.0",
    "yarl==1.24.2",
    "zeroconf>=0.149.16",
]

[project.scripts]
domesti-bot = "app.domesti_bot_cli:main"
domesti-bot-server = "config.serve:main"

[project.urls]
Homepage = "https://github.com/the-hcma/domesti-bot"
Repository = "https://github.com/the-hcma/domesti-bot"
Issues = "https://github.com/the-hcma/domesti-bot/issues"

[tool.hatch.build.targets.wheel]
packages = ["app", "config"]
# ``dist/`` is gitignored; CI and release builds run ``pnpm run build`` first.
artifacts = [
    "app/api/static/dist/main.js",
    "app/api/static/dist/main.js.map",
]

[tool.hatch.build.targets.sdist]
packages = ["app", "config"]
artifacts = [
    "app/api/static/dist/main.js",
    "app/api/static/dist/main.js.map",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "browser: layout checks that need headless Chromium (install dev group + playwright)",
    "integration: exercises real LAN hardware; requires env-specific credentials",
]

[dependency-groups]
dev = [
    "icecream>=2.2.0",
    "playwright>=1.60.0",
    "pyright>=1.1.410",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-xdist>=3.8.0",
]
