[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "domesti-bot"
version = "1.9.0"
description = "Self-hosted LAN home automation: tile UI and rule engine for TP-Link Kasa, Sonos, Vizio SmartCast, and GoTailwind devices, with My Tracks presence and geofence-driven automations."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Henrique Andrade", email = "thehcma@users.noreply.github.com" },
]
requires-python = ">=3.12"
keywords = [
    "domesti-bot",
    "fastapi",
    "home-automation",
    "kasa",
    "my-tracks",
    "owntracks",
    "rule-engine",
    "sonos",
    "tailwind",
    "vizio",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
]
dependencies = [
    "aiohappyeyeballs==2.6.2",
    "aiohttp>=3.14.1",
    "anyio==4.14.0",
    "astral>=3.2",
    "certifi>=2026.6.17",
    "click>=8.4.1",
    "croniter>=6.2.2",
    "cryptography>=49.0.0",
    "fastapi>=0.137.1",
    "gotailwind[cli]",
    "greenlet>=3.5.2",
    "httptools==0.8.0",
    "httpx>=0.28.1",
    "idna>=3.18",
    "lxml==6.1.1",
    "mashumaro==3.22",
    "prompt_toolkit>=3.0.43",
    "protobuf>=7.35.1",
    "pychromecast>=14.0.10",
    "pyproj",
    "python-kasa",
    "requests>=2.34.2",
    "soco>=0.31.1",
    "sqlalchemy>=2.0.51",
    "starlette>=1.3.1",
    "typer>=0.26.7",
    "uvicorn[standard]>=0.49.0",
    "watchfiles==1.2.0",
    "wcwidth>=0.8.1",
    "yarl==1.24.2",
    "zeroconf>=0.149.17",
]

[project.scripts]
domesti-bot = "app.domesti_bot_cli:main"
domesti-bot-server = "config.serve:main"

[project.urls]
Homepage = "https://github.com/the-hcma/domesti-bot"
Repository = "https://github.com/the-hcma/domesti-bot"
Issues = "https://github.com/the-hcma/domesti-bot/issues"

[tool.hatch.build.targets.wheel]
packages = ["app", "config"]
# ``dist/`` is gitignored; CI and release builds run ``pnpm run build`` first.
artifacts = [
    "app/api/static/dist/main.js",
    "app/api/static/dist/main.js.map",
]

[tool.hatch.build.targets.sdist]
packages = ["app", "config"]
artifacts = [
    "app/api/static/dist/main.js",
    "app/api/static/dist/main.js.map",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "browser: layout checks that need headless Chromium (install dev group + playwright)",
    "integration: exercises real LAN hardware; requires env-specific credentials",
]

[dependency-groups]
dev = [
    "httpx2>=2.4.0",
    "icecream>=2.2.0",
    "playwright>=1.60.0",
    "pyright>=1.1.410",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-xdist>=3.8.0",
]
